selfhost/test/typechecker/assignment/indexing_error_type_mismatch.1.out
Error at %FILE_NAME%:2:10
Type mismatch
  |  arr[0] = "1"
              ^
Expected: Int
but instead found: String
