selfhost/test/typechecker/assignment/indexing_error_type_mismatch.1.abra
val arr = [1, 2, 3]
arr[0] = "1"